--- a/Relatorio8/semanal8.tex
+++ b/Relatorio8/semanal8.tex
@@ -102,7 +102,7 @@
   $9.2,$ $9.4,$ $9.6,$ $9.8,$ $10$
   $\}$. Não foi possível obter os datos de afinidade para este conjunto de dados pois o software de regressão linear utilizado não conseguiu processar os grandes valores gerados pela simulação. 
 
-  Foram obtidos os gráficos das derivadas para a afinidade em função da Liquidez $q$. Foi comprovado o aumento da inclinação no ponto crítico para os gráficos de Afinidade versus Liquidez. Esses resultados estão nas Figuras \ref{fig:L50-derivada}, {fig:L100-derivada} e {fig:L250-derivada}.
+  Foram obtidos os gráficos das derivadas para a afinidade em função da Liquidez $q$. Foi comprovado o aumento da inclinação no ponto crítico para os gráficos de Afinidade versus Liquidez. Esses resultados estão nas Figuras \ref{fig:L50-derivada}, \ref{fig:L100-derivada} e \ref{fig:L250-derivada}.
 
   \begin{figure}[h]
     \centering
