--- a/Relatorio10/semanal10.tex
+++ b/Relatorio10/semanal10.tex
@@ -59,7 +59,7 @@
 
   Desde o último encontro foram realizadas as seguintes atividades:
 
-  Obtenção de um conjunto de 20000 pontos, para uma simulação que utilizou a vizinhança de Moore (8 células adjacentes), e considerou $L=50$ e $q\in\{$ 
+  Obtenção de cinco conjuntos de 20000 pontos, para uma simulação que utilizou a vizinhança de Moore (8 células adjacentes), e considerou $L=50$ e $q\in\{$ 
   $0.1,$ $0.2,$ $0.3,$ $0.4,$ $0.5,$ $0.6,$ $0.7,$ $0.8,$ $0.9,$
   $1,$ $1.2,$ $1.4,$ $1.6,$ $1.8,$ 
   $2,$ $2.2,$ $2.4,$ $2.6,$ $2.8,$ 
@@ -81,61 +81,95 @@
   $800,$ $820,$ $840,$ $860,$ $880,$ $900,$ $920,$ $940,$ $960,$ $980,$
   $1000\}$. 
 
-  Com a simulação acima foram observadas as seguintes coisas: a dependência do número de aglomerados continua linearmente relacionado com o estado médio; o gráfico do número de aglomerados em função do limiar médio continua dando indícios de comportamento caótico; e o gráfico do estado médio em função do ciclo apresenta um comportamento semelhante ao observado em circuitos RC. Abaixo estão algumas imagens que demonstram esses comportamentos.
+  Obtenção de cinco conjuntos de 10000 pontos, para uma simulação que utilizou a vizinhança de Moore (8 células adjacentes), e considerou $L\in\{$ $100,$ $250,$ $500$ $\}$  e $q\in\{$ 
+  $0.2,$ $0.4,$ $0.6,$ $0.8,$
+  $1,$ $1.2,$ $1.4,$ $1.6,$ $1.8,$ 
+  $2,$ $2.2,$ $2.4,$ $2.6,$ $2.8,$ 
+  $3,$ $3.2,$ $3.4,$ $3.6,$ $3.8,$
+  $4,$ $4.2,$ $4.4,$ $4.6,$ $4.8,$
+  $5,$ $5.2,$ $5.4,$ $5.6,$ $5.8,$
+  $6,$ $6.2,$ $6.4,$ $6.6,$ $6.8,$
+  $7,$ $7.2,$ $7.4,$ $7.6,$ $7.8,$
+  $8,$ $8.2,$ $8.4,$ $8.6,$ $8.8,$
+  $9,$ $9.2,$ $9.4,$ $9.6,$ $9.8,$ $10,$
+  $11,$ $12,$ $13,$ $14,$ $15,$ $16,$ $17,$ $18,$ $19,$ $20,$
+  $22,$ $24,$ $26,$ $28,$ $30,$ $32,$ $34,$ $36,$ $38,$ $40,$
+  $42,$ $44,$ $46,$ $48,$ $50$ $\}$. 
 
-  \begin{figure}[h]
-    \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_100-seed1495507078-AvgStateAvgThresVsCycle.png}
-    \caption{É observado um comportamento de circuito RC espelhado horizontalmente.}
-  \end{figure}
+  Obtenção de cinco conjuntos de 10000 pontos, para uma simulação que utilizou a vizinhança de Moore (8 células adjacentes), e considerou $L=500$  e $q\in\{$ 
+  $0.2,$ $0.4,$ $0.6,$ $0.8,$
+  $1,$ $1.2,$ $1.4,$ $1.6,$ $1.8,$ 
+  $2,$ $2.2,$ $2.4,$ $2.6,$ $2.8,$ 
+  $3,$ $3.2,$ $3.4,$ $3.6,$ $3.8,$
+  $4,$ $4.2,$ $4.4,$ $4.6,$ $4.8,$
+  $5,$ $5.2,$ $5.4,$ $5.6,$ $5.8,$
+  $6,$ $6.2,$ $6.4,$ $6.6,$ $6.8,$
+  $7,$ $7.2,$ $7.4,$ $7.6,$ $7.8,$
+  $8,$ $8.2,$ $8.4,$ $8.6,$ $8.8,$
+  $9,$ $9.2,$ $9.4,$ $9.6,$ $9.8,$ $10$ $\}$. 
 
-  \begin{figure}[h]
-    \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_100-seed1495507078-AvgStateAvgThresVsCycle10000.png}
-    \caption{O comportamento de circuito RC se mantém mesmo após vários ciclos.}
-  \end{figure}
-
-  \begin{figure}[h]
-    \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_200-seed1748155049-AvgStateAvgThresVsCycle.png}
-    \caption{}
-  \end{figure}
+  Cálculo das afinidades para o conjunto de dados com $L=500$ e vizinhança de Von Neumann. 
   
+  Cálculo das afinidades para os conjuntos de dados com $L\in\{50, 100, 250, 500\}$.
+
+  As Figuras \ref{fig:VonNeumannAfinidades}, \ref{fig:VonNeumannDerivadaAfinidade} e \ref{fig:VonNeumannMaximosDerivada} resumem todas as informações que foram encontradas sobre o comportamento da afinidade quando considerada a vizinhança de Von Neumann (células ortogonais) e $L\in\{50, 100, 250, 500\}$.
+
   \begin{figure}[h]
     \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_300-seed1828354078-AvgStateAvgThresVsCycle.png}
-    \caption{}
+    \includegraphics[width=.7\linewidth]{VonNeumannAfinidades.png}
+    \caption{Gráficos das afinidades para $L\in\{50, 100, 250, 500\}$ considerando a vizinhança de Von Neumann. Percebe-se que menores valores de $L$ geram curvas mais suaves em relação a valores maiores de $L$.}
+    \label{fig:VonNeumannAfinidades}
   \end{figure}
 
   \begin{figure}[h]
     \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_400-seed96536595-AvgStateAvgThresVsCycle.png}
-    \caption{}
-  \end{figure}
-  
-  \begin{figure}[h]
-    \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q0_600-seed899359190-AvgStateAvgThresVsCycle.png}
-    \caption{O comportamento de circuito RC aparece após o periodo de ``acomodamento''.}
+    \includegraphics[width=.7\linewidth]{VonNeumannDerivadaAfinidade.png}
+    \caption{Derivada da afinidade em relação a $q$ para $L\in\{50, 100, 250, 500\}$ e vizinhança de Von Neumann. Os máximos representam a velocidade de crescimento da afinidade no ponto crítico.}
+    \label{fig:VonNeumannDerivadaAfinidade}
   \end{figure}
 
   \begin{figure}[h]
     \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q3_799-seed1595107069-ClusterVsAvgThres.png}
-    \caption{Demonstração do comportamento caótico quando considerada uma vizinhança de Moore. O visual é igual ao observado para a vizinhança de Von Neumann.}
+    \includegraphics[width=.7\linewidth]{VonNeumannMaximosDerivada.png}
+    \caption{Posições x e y para os máximos da derivada da afinidade com Vizinhança de Von Neumann. O eixo x foi tomado como $\mathrm{log_2}(L)$ pois os dados têm uma dependência aproximadamente linear quando considerado isso. A coordenada x do máximo é dada por $M_{x}(L) = \mathrm{MAX}(d Afinidade / dq) \approx 0.080\cdot\mathrm{log_2}(L)+1.172$. A coordenada y do máximo é dada por $M_{x}(L) = \mathrm{MAX}(d Afinidade / dq) \approx 0.178\cdot\mathrm{log_2}(L)-0.234$.}
+    \label{fig:VonNeumannMaximosDerivada}
+  \end{figure}
+
+  As Figuras \ref{fig:MooreAfinidades}, \ref{fig:MooreDerivadaAfinidade} e \ref{fig:MooreMaximosDerivada} resumem todas as informações que foram encontradas sobre o comportamento da afinidade quando considerada a vizinhança de Moore (células ortogonais e diagonais) e $L\in\{50, 100, 250, 500\}$.
+
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=.7\linewidth]{MooreAfinidades.png}
+    \caption{Gráficos das afinidades para $L\in\{50, 100, 250, 500\}$ considerando a vizinhança de Moore. Percebe-se, novamente, que menores valores de $L$ geram curvas mais suaves em relação a valores maiores de $L$.}
+    \label{fig:MooreAfinidades}
   \end{figure}
 
   \begin{figure}[h]
     \centering
-    \includegraphics[width=.7\linewidth]{ICA-L50-q5_0-seed556358439-ClusterVsAvgState.png}
-    \caption{Demonstração da relação linear entre número de aglomerados e estado médio quando a vizinhança é de Moore.}
+    \includegraphics[width=.7\linewidth]{MooreDerivadaAfinidade.png}
+    \caption{Derivada da afinidade em relação a $q$ para $L\in\{50, 100, 250, 500\}$ e vizinhança de Moore. Os máximos representam a velocidade de crescimento da afinidade no ponto crítico.}
+    \label{fig:MooreDerivadaAfinidade}
   \end{figure}
 
-  Foi pesquisada a definição de volatilidade: ``Volatilidade, na área financeira, é uma medida de dispersão dos retornos de um título ou índice de mercado. Quanto mais o preço de uma ação varia num período curto de tempo, maior o risco de se ganhar ou perder dinheiro negociando esta ação, e, por isso, a volatilidade é uma medida de risco.'' A volatilidade pode ser dada, entre outras maneiras, pelo desvio padrão no preço de um produto ou em um mercado. Considerando essa definição, é possível relacionar o preço com o limiar, e $q$ com a volatilidade.
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=.7\linewidth]{MooreMaximosDerivada.png}
+    \caption{Posições x e y para os máximos da derivada da afinidade com Vizinhança de Moore. O eixo x foi tomado como $\mathrm{log_2}(L)$ pois os dados têm uma dependência aproximadamente linear quando considerado isso. A coordenada x do máximo é dada por $M_{x}(L) = \mathrm{MAX}(d Afinidade / dq) \approx 0.208\cdot\mathrm{log_2}(L)+3.412$. A coordenada y do máximo é dada por $M_{x}(L) = \mathrm{MAX}(d Afinidade / dq) \approx 0.083\cdot\mathrm{log_2}(L)-0.178$.}
+    \label{fig:MooreMaximosDerivada}
+  \end{figure}
+
+  Foi desenvolvido o seguinte de resumo para apresentação ao EVINCI:\\
+  \textit{Utilizando um autômato celular bidimensional desenvolvido por Dietrich Stauffer e Gérard Weisbuch para simulações de compra e venda de agentes em um mercado, determinamos a intensidade com que esses agentes tendem a tomar decisões em conjunto, denominada afinidade. Isso foi feito considerando vizinhanças de Moore e Von Neumann. Desenvolvemos duas interpretações para a variável que determina a velocidade do sistema: liquidez de mercado, e volatilidade. Essas simulações foram feitas para números diferentes de agentes, variando de 2500 a 250000. Descobrimos, nessa análise positiva, que a afinidade é uma função sigmóide da liquidez do mercado, variando com o número de agentes nesse mercado. Com base nesses dados percebemos que, para mercados com alta liquidez, como o de alimentos, a tendência a aglomeração de agentes é alta, o que explica as Centrais de Abastecimento CEASA. Analogamente, quando a liquidez do mercado é baixa, como no caso dos itens de colecionador e figurinhas de copa do mundo, a tendência de aglomeração é menor, fazendo com que existam mais aglomerados esparsamente distribuídos, como grupos de troca de figurinhas em várias praças de uma mesma cidade. Com a análise de volatilidade foi percebido um comportamento semelhante ao de mercados financeiros. Aproveitando a forma com que computadores geram números aleatórios também foi possível verificar se os autômatos celulares estudados apresentavam comportamento caótico. Colateralmente foi desenvolvido um algoritmo de contagem de aglomerados para autômatos celulares em duas dimensões que se mostrou mais eficiente do que os utilizados atualmente.}\\ \textbf{Palavras-chave:} microeconomia, autômato celular, aglomeração, análise positiva, liquidez de mercado, volatilidade de mercado, estocasticidade, modelagem, econofísica.
 
   Para os próximos dias, estas serão as tarefas realizadas:
   \begin{enumerate}
-    \item Explicação do porquê de o limiar intrínseco a cada célula ser considerado como um determinador do momento certo para vender ou comprar;
+    \item Verificação de comportamento caótico para o autômato celular considerando as vizinhanças de Moore e Von Neumann;
+    \item Demonstração matemática do Algoritmo de Contagem de Aglomerados utilizado;
+    \item Desenvolvimento da explicação que considera $q$ como liquidez;
+    \item Desenvolvimento da explicação que considera $q$ como volatilidade;
+    \item Explicação do porquê de o limiar intrínseco a cada célula ser considerado como um determinador do momento certo para vender ou comprar, no caso de $q$ ser considerado como liquidez;
+    \item Leitura de Referênciais Teóricos apropriados para os trabalhos desenvolvidos;
+    \item Escrita do TCC.
 	\end{enumerate}
 
 \end{document}
